@@ -1,3 +1,7 @@
+Fri Dec 14 16:50:07 2001  George Lebl <jirka@5z.com>
+
+	* drawer.c: reenable property apply code
+
 Fri Dec 14 16:41:23 2001  George Lebl <jirka@5z.com>
 
 	* menu.[ch], launcher.c: some deFIXMEization.  Remove some dead
